# bobbycar-project

./: .gitignore  .gitmodules  EdgeTX-Bobbycar.yml  README.md  log36340characters  log40914characters  sdkconfig  sdkconfig.defaults
.github/workflows/: esp-idf-latest.yaml
clean_log/: a.out  in.txt  log1.txt  log2.txt  log3.5.txt  log3.txt  log4.txt  logs.txt  main.c  out.txt
components/CRSF/: CMakeLists.txt  CRSF.cpp  CRSF.hpp
components/bluepad32/: CMakeLists.txt
components/crc32/: CMakeLists.txt  crc32.c  crc32.h
components/simulator/: car.cpp  car.hpp  follower.hpp  position.cpp  position.hpp
joystick_linux/: joystick-client.c
main/: CMakeLists.txt  adc1_read.c  adc1_read.h  arduino_main.cpp  bobbycar.cpp  bobbycar.hpp  command_interpreter.c  command_interpreter.h  config.h  console_task.c  console_task.h  defines.h  display.cpp  display.hpp  display_2004.cpp  display_2004.hpp  display_none.cpp  display_none.hpp  display_oled.cpp  display_oled.hpp  gamepad_manager.cpp  gamepad_manager.h  inputreader.c  inputreader.h  logging.cpp  logging.h  lookup-tables.c  lookup-tables.h  lookup-tables_30_10_60_100.c  lookup-tables_30_10_60_100.h  lookup-tables_30_5_60_100.c  lookup-tables_30_5_60_100.h  lookup_table_types.c  lookup_table_types.h  math_functions.c  math_functions.h  pid_contols.cpp  pid_controls.h  pid_controls.hpp  pushed_follower.cpp  (+9 more)
simulation/: Main.cpp  Makefile  car.cpp  car.hpp  follower.cpp  follower.hpp  position.cpp  position.hpp  simulator.cpp  simulator.hpp  simulator_for_follower.cpp
